Update topgrade config

--- a/.config/topgrade.toml
+++ b/.config/topgrade.toml
@@ -33,7 +33,7 @@ pre_sudo = true
 # tmux_arguments = "-S /var/tmux.sock"
 
 # Do not set the terminal title (default: true)
-# set_title = true
+set_title = false
 
 # Display the time in step titles (default: true)
 display_time = false
@@ -60,7 +60,7 @@ skip_notify = true
 # bashit_branch = "stable"
 
 # Run specific steps - same options as the command line flag
-only = ["system", "yadm", "flatpak"]
+only = ["system", "yadm", "flatpak", "gnome_shell_extensions", "pipx", "snap", "vim"]
 
 # Whether to self update
 #
@@ -83,7 +83,7 @@ only = ["system", "yadm", "flatpak"]
 # Commands to run after anything
 [post_commands]
 # "Emacs Snapshot" = "rm -rf ~/.emacs.d/elpa.bak && cp -rl ~/.emacs.d/elpa ~/.emacs.d/elpa.bak"
-
+"Clean XBPS packages and cache" = "command -v xbps-remove &> /dev/null && { set -x; sudo xbps-remove -OoR; } || echo 'XBPS not available, skipping...'"
 
 # Custom commands
 [commands]
