--- a/.config/alf/alf.conf
+++ b/.config/alf/alf.conf
@@ -5,9 +5,9 @@ grep: grep --color=auto
 ip: ip --color=auto
 
 # ls aliases
-ls: ls --color=auto
+ls: command -v lsd &>/dev/null && lsd "$@" || ls --color=auto "$@"
 la: ls -A
-ll: ls -oF --si --group-directories-first --time-style="+%Y-%m-%d %H:%M:%S"
+ll: ls -l
 lla: ll -A
 
 # misc
