--- a/.config/alf/alf.conf
+++ b/.config/alf/alf.conf
@@ -3,9 +3,10 @@ egrep: egrep --color=auto
 fgrep: fgrep --color=auto
 grep: grep --color=auto
 ip: ip --color=auto
+pstree: pstree -U "$@" | sed -e 's/[-a-zA-Z]\+/\x1B[32m&\x1B[0m/g' -e 's/[{}]/\x1B[31m&\x1B[0m/g' -e 's/[─┬─├─└│]/\x1B[34m&\x1B[0m/g'
 
 # ls aliases
-ls: command -v lsd &>/dev/null && lsd "$@" || ls --color=auto "$@"
+ls: lsd
 la: ls -A
 ll: ls -l
 lla: ll -A
@@ -16,8 +17,6 @@ update: topgrade
 # improved git log
 git: git
   log: log --all --graph --abbrev-commit --decorate --format=format:"%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset)%C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)"
-
-pstree: pstree -U "$@" | sed -e 's/[-a-zA-Z]\+/\x1B[32m&\x1B[0m/g' -e 's/[{}]/\x1B[31m&\x1B[0m/g' -e 's/[─┬─├─└│]/\x1B[34m&\x1B[0m/g'
 
 # restore cursor caret to blinking underline at nvim exit
 nvim: nvim "$@"; echo -en "\033[3 q"
