Allow repeating for Ctrl+Q

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -98,7 +98,7 @@ opengl {
 
 $mainMod = SUPER
 
-bind = $mainMod, Q, exec, $terminal
+binde = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
