--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ exec-once = swaync # notification daemon
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = MOZ_ENABLE_WAYLAND,1
 
 general { 
     gaps_in = 5
