Set proper cursor theme

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@ $fileManager = nautilus
 $menu = wofi --show=drun --allow-images --allow-markup --normal-window --contains=fuzzy --insensitive
 
 exec-once = swaync # notification daemon
+exec-once = hyprctl setcursor Adwaita 24
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
