--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -137,6 +137,9 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+binde = ALT, Tab, cyclenext
+binde = ALT, Tab, bringactivetotop
+
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
