Start pipewire in Hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ $menu = wofi --show=drun --allow-images --allow-markup --normal-window --contain
 
 exec-once = swaync # notification daemon
 exec-once = hyprctl setcursor Adwaita 24
+exec-once = pipewire
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
