--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -174,5 +174,16 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume --limit 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
+bindel = , XF86MonBrightnessDown, exec, brightnessctl set 5%- 
+bindel = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPrev, exec, playerctl previous
+bindl = , XF86AudioNext, exec, playerctl next
+
 windowrulev2 = suppressevent maximize, class:.*
 
