--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -114,6 +114,7 @@ input {
         natural_scroll = true
         middle_button_emulation = true
         clickfinger_behavior = true
+        disable_while_typing = false
     }
 }
 
