--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,64 +1,46 @@
 {
-    "layer": "top", // Waybar at top layer
-    "position": "top", // Waybar at the bottom of your screen
-    "height": 24, // Waybar height
-    // "width": 1366, // Waybar width
-    // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/spotify"],
-    "modules-center": ["sway/window"],
-    "modules-right": ["pulseaudio", "network", "cpu", "memory", "battery", "tray", "clock"],
-    "sway/workspaces": {
-        "disable-scroll": true,
-        "all-outputs": false,
-        "format": "{icon}",
-        "format-icons": {
-            "1:web": "",
-            "2:code": "",
-            "3:term": "",
-            "4:work": "",
-            "5:music": "",
-            "6:docs": "",
-            "urgent": "",
-            "focused": "",
-            "default": ""
-        }
-    },
-    "sway/mode": {
-        "format": "<span style=\"italic\">{}</span>"
-    },
+    "layer": "top",
+    "position": "top",
+    "height": 24,
+    "modules-left": ["hyprland/workspaces", "custom/spotify"],
+    "modules-center": ["hyprland/window"],
+    "modules-right": ["tray", "backlight/slider", "backlight", "pulseaudio", "network", "temperature", "cpu", "memory", "custom/gpu-usage", "battery", "clock"],
     "tray": {
-        // "icon-size": 21,
         "spacing": 10
     },
+    "backlight/slider": {
+      "min": 0,
+      "max": 100,
+      "orientation": "horizontal"
+    },
+    "backlight": {
+      "device": "intel_backlight",
+      "format": "{percent}%",
+    },
     "clock": {
-        "format-alt": "{:%Y-%m-%d}"
+        "interval": 1,
+        "format": "{:%d. %m. %Y %H:%M:%S}"
     },
     "cpu": {
-        "format": "{usage}% "
+        "interval": 2,
+        "format": "{avg_frequency} GHz ({usage}%) "
     },
     "memory": {
-        "format": "{}% "
+        "interval": 2,
+        "format": "{used} GiB ({percentage}%) "
     },
     "battery": {
-        "bat": "BAT0",
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{capacity}% {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
+        "frequency": 10,
+        "format": "{capacity}% ({time} @ {power:0.2f}W) {icon}",
         "format-icons": ["", "", "", "", ""]
     },
     "network": {
-        // "interface": "wlp2s0", // (Optional) To force the use of this interface
+        "interval": 5,
         "format-wifi": "{essid} ({signalStrength}%) ",
         "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
         "format-disconnected": "Disconnected ⚠"
     },
     "pulseaudio": {
-        //"scroll-step": 1,
         "format": "{volume}% {icon}",
         "format-bluetooth": "{volume}% {icon}",
         "format-muted": "",
@@ -75,9 +57,20 @@
     },
     "custom/spotify": {
         "format": " {}",
-        "max-length": 40,
-        "interval": 30, // Remove this if your script is endless and write in loop
-        "exec": "$HOME/.config/waybar/mediaplayer.sh 2> /dev/null", // Script in resources folder
+        "max-length": 80,
+        "interval": 1,
+        "exec": "$HOME/.config/waybar/spotify.sh 2> /dev/null",
         "exec-if": "pgrep spotify"
+    },
+     "temperature": {
+      "interval": 10,
+      "thermal-zone": 0,
+      "format": "{temperatureC}°C "
+    },
+    "custom/gpu-usage": {
+      "exec": "cat /sys/class/hwmon/hwmon2/device/gpu_busy_percent",
+      "format": "GPU: {}%",
+      "return-type": "",
+      "interval": 2
     }
 }
