Add basic hyprlock and hypridle setup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,10 +6,11 @@ $terminal = alacritty
 $fileManager = nautilus
 $menu = wofi --show=drun --allow-images --allow-markup --normal-window --contains=fuzzy --insensitive
 
-exec-once = swaync # notification daemon
 exec-once = hyprctl setcursor Adwaita 24
 exec-once = pipewire
+exec-once = hypridle
 exec-once = ~/.config/waybar/start.sh
+exec-once = swaync # notification daemon
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
@@ -181,6 +182,8 @@ bindel = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioNext, exec, playerctl next
+
+bind = $mainMod, L, exec, hyprlock
 
 windowrulev2 = suppressevent maximize, class:.*
 
