--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@ monitor=,1920x1080@60,0x0,1
 
 $terminal = alacritty
 $fileManager = nautilus
-$menu = wofi --show=drun --allow-images --allow-markup --normal-window --contains=fuzzy --insensitive
+$menu = wofi
 
 exec-once = hyprctl setcursor Adwaita 24
 exec-once = pipewire
@@ -14,6 +14,7 @@ exec-once = swaync # notification daemon
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = GTK_THEME, Adwaita-dark
 
 # wayland
 env = CLUTTER_BACKEND,wayland
