--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -186,6 +186,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioNext, exec, playerctl next
 
 bind = $mainMod, L, exec, hyprlock
+bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 
 windowrulev2 = suppressevent maximize, class:.*
 
