Remove old kernels during topgrade run

--- a/.config/topgrade.toml
+++ b/.config/topgrade.toml
@@ -82,8 +82,8 @@ only = ["system", "yadm", "flatpak", "gnome_shell_extensions", "pipx", "snap"]
 
 # Commands to run after anything
 [post_commands]
-# "Emacs Snapshot" = "rm -rf ~/.emacs.d/elpa.bak && cp -rl ~/.emacs.d/elpa ~/.emacs.d/elpa.bak"
 "Clean XBPS packages and cache" = "command -v xbps-remove &> /dev/null && { set -x; sudo xbps-remove -OoRy; } || echo 'XBPS not available, skipping...'"
+"Remove old kernels" = "command -v vkpurge &> /dev/null && vkpurge list | tac | tail -n +2 | xargs -r vkpurge rm || echo 'vkpurge not available, skipping...'" 
 
 # Custom commands
 [commands]
