--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,6 +28,7 @@ env = PROTON_ENABLE_NGX_UPDATER,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland
 env = SDL_VIDEODRIVER,wayland
+env = SIGNAL_USE_WAYLAND, 1
 env = WLR_DRM_NO_ATOMIC,1
 env = WLR_NO_HARDWARE_CURSORS,1
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
