Auto-start common apps

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,6 +12,11 @@ exec-once = hypridle
 exec-once = ~/.config/waybar/start.sh
 exec-once = swaync # notification daemon
 
+exec-once = flatpak run com.discordapp.Discord --start-minimized
+exec-once = flatpak run com.sindresorhus.Caprine
+exec-once = flatpak run org.signal.Signal
+exec-once = steam -silent
+
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GTK_THEME, Adwaita-dark
