Convert xwayland indicator from polling to event listener

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,6 +10,7 @@ exec-once = hyprctl setcursor Adwaita 24
 exec-once = pipewire
 exec-once = hypridle
 exec-once = ~/.config/waybar/start.sh
+exec-once = ~/.config/hypr/events.sh
 exec-once = swaync # notification daemon
 
 exec-once = flatpak run com.discordapp.Discord --start-minimized
