--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,8 +13,8 @@ exec-once = ~/.config/waybar/start.sh
 exec-once = ~/.config/hypr/events.sh
 exec-once = swaync # notification daemon
 
-exec-once = flatpak run com.discordapp.Discord --start-minimized
-exec-once = flatpak run com.sindresorhus.Caprine
+exec-once = flatpak run io.github.spacingbat3.webcord --start-minimized
+exec-once = flatpak run com.sindresorhus.Caprine --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec-once = flatpak run org.signal.Signal
 exec-once = steam -silent
 
