Improve cursor theme setting; define XDG vars explicitly

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,6 @@ $terminal = alacritty
 $fileManager = nautilus
 $menu = wofi
 
-exec-once = hyprctl setcursor Adwaita 24
 exec-once = pipewire
 exec-once = hypridle
 exec-once = ~/.config/waybar/start.sh
@@ -18,9 +17,13 @@ exec-once = flatpak run com.sindresorhus.Caprine --enable-features=UseOzonePlatf
 exec-once = flatpak run org.signal.Signal
 exec-once = steam -silent
 
+env = XCURSOR_THEME, Adwaita
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
 env = GTK_THEME, Adwaita-dark
+
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 # wayland
 env = CLUTTER_BACKEND,wayland
