Add hyprexpo plugin

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,6 +6,7 @@ $terminal = alacritty
 $fileManager = nautilus
 $menu = wofi
 
+exec-once = hyprpm reload -n
 exec-once = pipewire
 exec-once = hypridle
 exec-once = ~/.config/waybar/start.sh
@@ -133,6 +134,20 @@ opengl {
     force_introspection = 1
 }
 
+plugin {
+    hyprexpo {
+        columns = 2
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = center current
+
+        enable_gesture = true
+        gesture_fingers = 3
+        gesture_distance = 300
+        gesture_positive = false
+    }
+}
+
 $mainMod = SUPER
 
 binde = $mainMod, Q, exec, $terminal
@@ -197,6 +212,8 @@ bindl = , XF86AudioNext, exec, playerctl next
 
 bind = $mainMod, L, exec, hyprlock
 bind = , Print, exec, pkill slurp || grim -g "$(slurp -d)" - | wl-copy
+
+bindr = SUPER, SUPER_L, hyprexpo:expo, toggle
 
 windowrulev2 = suppressevent maximize, class:.*
 
