--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,9 +9,9 @@ $menu = wofi
 exec-once = hyprpm reload -n
 exec-once = pipewire
 exec-once = hypridle
+exec-once = swaync
 exec-once = ~/.config/waybar/start.sh
 exec-once = ~/.config/hypr/events.sh
-exec-once = swaync # notification daemon
 
 exec-once = flatpak run io.github.spacingbat3.webcord --start-minimized
 exec-once = flatpak run com.sindresorhus.Caprine --enable-features=UseOzonePlatform --ozone-platform=wayland
