Fix hyprexpo keybind issue at startup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,12 @@ $terminal = alacritty
 $fileManager = nautilus
 $menu = wofi
 
+
 exec-once = hyprpm reload -n
+
+# add binds for plugins at runtime because hyprpm needs to load them first
+exec = hyprctl keyword bind SUPER, SUPER_L, hyprexpo:expo, toggle
+
 exec-once = pipewire
 exec-once = hypridle
 exec-once = swaync
@@ -212,8 +217,6 @@ bindl = , XF86AudioNext, exec, playerctl next
 
 bind = $mainMod, L, exec, hyprlock
 bind = , Print, exec, pkill slurp || grim -g "$(slurp -d)" - | wl-copy
-
-bindr = SUPER, SUPER_L, hyprexpo:expo, toggle
 
 windowrulev2 = suppressevent maximize, class:.*
 
