Make sure only one instance of wofi is running

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,13 +4,11 @@ monitor=,1920x1080@60,0x0,1
 
 $terminal = alacritty
 $fileManager = nautilus
-$menu = wofi
-
 
 exec-once = hyprpm reload -n
 
 # add binds for plugins at runtime because hyprpm needs to load them first
-exec = hyprctl keyword bind SUPER, SUPER_L, hyprexpo:expo, toggle
+exec = hyprctl keyword bindr SUPER, SUPER_L, hyprexpo:expo, toggle
 
 exec-once = pipewire
 exec-once = hypridle
@@ -160,7 +158,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, R, exec, pkill wofi || wofi
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
