Add hyprpicker config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -215,6 +215,7 @@ bindl = , XF86AudioNext, exec, playerctl next
 
 bind = $mainMod, L, exec, hyprlock
 bind = , Print, exec, pkill slurp || grim -g "$(slurp -d)" - | wl-copy
+bind = SHIFT, Print, exec, pkill hyprpicker || hyprpicker --autocopy --format=hex --no-fancy
 
 windowrulev2 = suppressevent maximize, class:.*
 
