Add smooth dim effect to hypridle backlight management

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -8,8 +8,8 @@ general {
 
 listener {
     timeout = 150
-    on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = brightnessctl -r                 # monitor backlight restore.
+    on-timeout = pkill -USR1 dimd.sh            # set monitor backlight to minimum
+    on-resume = pkill -USR2 dimd.sh             # monitor backlight restore
 }
 
 listener {
