--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,6 +11,7 @@ exec-once = hyprpm reload -n
 exec = hyprctl keyword bindr SUPER, SUPER_L, hyprexpo:expo, toggle
 
 exec-once = pipewire
+exec-once = ~/.config/hypr/dimd.sh
 exec-once = hypridle
 exec-once = swaync
 exec-once = ~/.config/waybar/start.sh
