Tweak Hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -124,16 +124,19 @@ input {
     touchpad {
         natural_scroll = true
         middle_button_emulation = true
-        clickfinger_behavior = true
         disable_while_typing = false
+        drag_lock = true
     }
 }
 
 gestures {
     workspace_swipe = true
+    workspace_swipe_forever = true
+    workspace_swipe_direction_lock = false
 }
 
 opengl {
+    nvidia_anti_flicker = true
     force_introspection = 1
 }
 
