--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,23 +2,77 @@
   "layer": "top",
   "position": "top",
   "height": 24,
-  "modules-left": ["hyprland/workspaces", "custom/spotify"],
-  "modules-center": ["custom/xwayland", "hyprland/window"],
-  "modules-right": ["tray", "backlight", "pulseaudio", "network", "temperature", "cpu", "memory", "custom/gpu-usage", "battery", "clock", "custom/notification"],
+  "modules-left": ["hyprland/workspaces", "mpris", "gamemode", "privacy", "custom/xbps-updates", "custom/xwayland"],
+  "modules-center": ["hyprland/window"],
+  "modules-right": ["tray", "backlight", "wireplumber", "network", "temperature", "cpu", "memory", "custom/gpu-usage", "battery", "clock", "custom/notification"],
   "tray": {
     "spacing": 10
   },
+  "gamemode": {
+    "format-alt": "{glyph}",
+    "icon-size": 16
+  },
+  "hyprland/window": {
+    "icon": true,
+    "icon-size": 16,
+    "separate-outputs": true,
+    "max-length": 45
+  },
+  "privacy": {
+    "icon-spacing": 4,
+    "icon-size": 14,
+    "transition-duration": 250,
+    "modules": [
+      {
+        "type": "screenshare",
+        "tooltip": true,
+        "tooltip-icon-size": 24
+      },
+      {
+        "type": "audio-in",
+        "tooltip": true,
+        "tooltip-icon-size": 24
+      }
+    ]
+  },
+  "custom/xbps-updates": {
+    "format": "{}  ",
+    "return-type": "json",
+    "tooltip": true,
+    "interval": 60,
+    "exec": "~/.config/waybar/custom/xbps-updates.sh"
+  },
+  "mpris": {
+    "format": "{status_icon} {player_icon} {artist} – {title}",
+    "player-icons": {
+      "default": "🎵",
+      "spotify": " ",
+      "firefox": "󰈹",
+      "vlc": "󰕼",
+      "chromium": "",
+      "mpv": ""
+    },
+    "status-icons": {
+      "playing": "",
+      "paused": "",
+      "stopped": ""
+    },
+    "artist-len": 15,
+    "title-len": 45,
+    "on-scroll-up": "playerctl previous",
+    "on-scroll-down": "playerctl next"
+  },
   "backlight": {
     "device": "intel_backlight",
-    "format": "{percent}% 󰛨",
+    "format": "{percent}% 󰛨"
   },
   "clock": {
     "interval": 1,
-    "format": "{:%d. %m. %Y %H:%M:%S}"
+    "format": "{:%d/%m/%y %H:%M:%S}"
   },
   "cpu": {
     "interval": 2,
-    "format": "{avg_frequency} GHz ({usage}%) ",
+    "format": "{avg_frequency} GHz ({usage}%) "
   },
   "memory": {
     "interval": 2,
@@ -31,18 +85,25 @@
   },
   "network": {
     "interval": 5,
-    "format-wifi": "{essid} ({signalStrength}%) ",
-    "format-ethernet": "{ifname}: {ipaddr}/{cidr} 󰈀",
-    "format-disconnected": "Disconnected "
+    "format-wifi": "{essid} {signalStrength}% {icon} ({bandwidthDownBytes} 󰇚 {bandwidthUpBytes} 󰕒)",
+    "format-ethernet": "{ifname} {icon} ({bandwidthDownBytes} 󰇚 {bandwidthUpBytes} 󰕒)",
+    "format-disconnected": "Disconnected {icon}",
+    "format-icons": {
+      "wifi": "",
+      "ethernet": "󰈀",
+      "disconnected": ""
+    },
+    "tooltip-disconnected": " Disconnected",
+    "tooltip-format": "{icon} {ifname}\n󰩟 address: {ipaddr}/{cidr}\n󰑩 gateway: {gwaddr}\n󰓅 bandwidth: {bandwidthDownBytes} 󰇚 {bandwidthUpBytes} 󰕒"
   },
-  "pulseaudio": {
+  "wireplumber": {
     "format": "{volume}% {icon}",
     "format-bluetooth": "{volume}% {icon}",
     "format-muted": "",
     "format-icons": {
       "headphones": "",
       "handsfree": "",
-      "headset": "",
+      "headset": "",
       "phone": "",
       "portable": "",
       "car": "",
@@ -50,20 +111,13 @@
     },
     "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle"
   },
-  "custom/spotify": {
-    "format": " {}",
-    "max-length": 80,
-    "interval": 1,
-    "exec": "$HOME/.config/waybar/custom/spotify.sh 2> /dev/null",
-    "exec-if": "pgrep spotify"
-  },
    "temperature": {
     "interval": 10,
     "thermal-zone": 0,
     "format": "{temperatureC}°C "
   },
   "custom/gpu-usage": {
-    "exec": "$HOME/.config/waybar/custom/gpu-usage.sh 2> /dev/null",
+    "exec": "~/.config/waybar/custom/gpu-usage.sh",
     "format": "GPU: {}%",
     "return-type": "",
     "interval": 2
@@ -86,12 +140,13 @@
     "exec-if": "which swaync-client",
     "exec": "swaync-client -swb",
     "on-click": "swaync-client -t -sw",
-    "on-click-right": "swaync-client -d -sw",
+    "on-click-right": "swaync-client -d -sw"
   },
   "custom/xwayland": {
     "format": "{}",
-    "exec": "[ $(hyprctl activewindow -j | jq '.xwayland') = 'true' ] && echo ''",
-    "signal": 1
+    "exec": "hyprctl activewindow | grep -q 'xwayland: 1' && echo ''",
+    "signal": 1,
+    "tooltip-format": "XWayland"
   }
 }
 
