Add QT6 theme config alongside of QT5

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ exec-once = steam -silent
 env = XCURSOR_THEME, Adwaita
 env = XCURSOR_SIZE,24
 env = GTK_THEME, Adwaita-dark
-env = QT_QPA_PLATFORMTHEME, qt5ct
+env = QT_QPA_PLATFORMTHEME, qt5ct:qt6ct
 
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
