Make sure all electron apps run under wayland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ exec-once = ~/.config/waybar/start.sh
 exec-once = ~/.config/hypr/events.sh
 
 exec-once = flatpak run io.github.spacingbat3.webcord --start-minimized
-exec-once = flatpak run com.sindresorhus.Caprine --enable-features=UseOzonePlatform --ozone-platform=wayland
+exec-once = flatpak run com.sindresorhus.Caprine
 exec-once = flatpak run org.signal.Signal
 exec-once = steam -silent
 
@@ -32,6 +32,7 @@ env = XDG_SESSION_DESKTOP,Hyprland
 
 # wayland
 env = CLUTTER_BACKEND,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 env = GBM_BACKEND,nvidia-drm
 env = GDK_BACKEND,wayland,x11
 env = LIBVA_DRIVER_NAME,nvidia
@@ -42,7 +43,6 @@ env = PROTON_ENABLE_NGX_UPDATER,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland
 env = SDL_VIDEODRIVER,wayland
-env = SIGNAL_USE_WAYLAND, 1
 env = WLR_DRM_NO_ATOMIC,1
 env = WLR_NO_HARDWARE_CURSORS,1
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
