--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,7 +44,6 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland
 env = SDL_VIDEODRIVER,wayland
 env = WLR_DRM_NO_ATOMIC,1
-env = WLR_NO_HARDWARE_CURSORS,1
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
 env = WLR_USE_LIBINPUT,1
 env = _JAVA_AWT_WM_NONREPARENTING,1
@@ -135,6 +134,10 @@ gestures {
     workspace_swipe = true
     workspace_swipe_forever = true
     workspace_swipe_direction_lock = false
+}
+
+cursor {
+    no_hardware_cursors = true
 }
 
 opengl {
