--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,10 +1,9 @@
 # vim: filetype=hyprlang
 
-monitor=,1920x1080@60,0x0,1
-
 $terminal = alacritty
 $fileManager = nautilus
 
+exec-once = kanshi
 exec-once = hyprpm reload -n
 
 # add binds for plugins at runtime because hyprpm needs to load them first
