--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,7 +2,7 @@
   "layer": "top",
   "position": "top",
   "height": 24,
-  "modules-left": ["hyprland/workspaces", "mpris", "gamemode", "privacy", "custom/xbps-updates", "custom/xwayland"],
+  "modules-left": ["hyprland/workspaces", "mpris", "gamemode", "privacy", "custom/xwayland", "custom/xbps-updates"],
   "modules-center": ["hyprland/window"],
   "modules-right": ["tray", "backlight", "pulseaudio", "network", "temperature", "cpu", "memory", "custom/gpu-usage", "battery", "clock", "custom/notification"],
   "tray": {
