Create proper hyprlock config

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,11 +1,51 @@
 # vim: filetype=hyprlang
 
+$fontColor = rgb(255, 255, 255)
+$backgroundColor = rgb(0, 0, 0)
+$outlineColor = rgb(42, 198, 227)
+
+general {
+  hide_cursor = true
+  ignore_empty_input = true
+
+  # helps on nvidia
+  no_fade_in = true
+  no_fade_out = true
+}
+
 input-field {
   monitor =
-  fade_on_empty = false
+  size = 200, 40
+  fade_on_empty = true
+  outline_thickness = 1
+  outer_color = $outlineColor
+  inner_color = $backgroundColor
+  font_color = $fontColor
+  placeholder_text =
+}
+
+label {
+  monitor =
+  text = $TIME
+  halign = center
+  valign = center
+  position = 0, 90
+  font_size = 25
+  color = $fontColor
+}
+
+label {
+  monitor =
+  text = cmd[update:0] date +"%A, %B %d"
+  halign = center
+  valign = center
+  position = 0, 50
+  font_size = 15
+  color = $fontColor
 }
 
 background {
-  color = rgb(0, 0, 0)
+  path = screenshot
+  blur_passes = 2
 }
 
