--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 # vim: filetype=hyprlang
 
 $fontColor = rgb(255, 255, 255)
-$backgroundColor = rgb(0, 0, 0)
+$backgroundColor = rgba(0, 0, 0, 0.8)
 $outlineColor = rgb(42, 198, 227)
 
 general {
@@ -22,16 +22,21 @@ input-field {
   inner_color = $backgroundColor
   font_color = $fontColor
   placeholder_text =
+  fail_text =
+  shadow_passes = 2
+  shadow_size = 5
 }
 
 label {
   monitor =
-  text = $TIME
+  text = cmd[update:1000] date +"%H:%M:%S"
   halign = center
   valign = center
   position = 0, 90
   font_size = 25
   color = $fontColor
+  shadow_passes = 2
+  shadow_size = 5
 }
 
 label {
@@ -42,6 +47,8 @@ label {
   position = 0, 50
   font_size = 15
   color = $fontColor
+  shadow_passes = 2
+  shadow_size = 5
 }
 
 background {
