Enable tearing and VRR

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -58,7 +58,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     resize_on_border = true
-    allow_tearing = false
+    allow_tearing = true
 
     layout = master
 }
@@ -102,6 +102,7 @@ master {
 
 misc {
     force_default_wallpaper = 0
+    vrr = 1
 }
 
 input {
