Disable tearing; add bind for fullscreen toggle

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -58,7 +58,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     resize_on_border = true
-    allow_tearing = true
+    allow_tearing = false
 
     layout = master
 }
@@ -157,8 +157,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, pkill wofi || wofi
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen,
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
