--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -68,7 +68,19 @@
   },
   "clock": {
     "interval": 1,
-    "format": "{:%d/%m/%y %H:%M:%S}"
+    "format": "{:%d/%m/%y %H:%M:%S}",
+    "tooltip-format": "<tt>{calendar}</tt>",
+    "calendar": {
+      "mode": "month",
+      "weeks-pos": "left",
+      "format": {
+			"months":     "<span color='#ffead3'><b>{}</b></span>",
+			"days":       "<span color='#ecc6d9'><b>{}</b></span>",
+			"weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+			"weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+			"today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+		  }
+    }
   },
   "cpu": {
     "interval": 2,
