--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ exec-once = hypridle
 exec-once = swaync
 exec-once = ~/.config/waybar/start.sh
 exec-once = ~/.config/hypr/events.sh
+exec-once = ~/.config/ntfyd/start.sh
 
 exec-once = flatpak run io.github.spacingbat3.webcord --start-minimized
 exec-once = flatpak run com.sindresorhus.Caprine
