--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ env = NVD_BACKEND,direct
 env = PROTON_ENABLE_NGX_UPDATER,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland
-env = SDL_VIDEODRIVER,wayland,x11
+env = SDL_VIDEODRIVER,wayland,x11,windows
 env = WLR_DRM_NO_ATOMIC,1
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
 env = WLR_USE_LIBINPUT,1
