--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -216,4 +216,5 @@ bind = , Print, exec, pkill slurp || grim -g "$(slurp -d)" - | wl-copy
 bind = SHIFT, Print, exec, pkill hyprpicker || hyprpicker --autocopy --format=hex --no-fancy
 
 windowrulev2 = suppressevent maximize, class:.*
+windowrulev2 = tile, initialTitle:Visual Paradigm
 
