Make mpv and Firefox windows always opaque

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -217,4 +217,5 @@ bind = SHIFT, Print, exec, pkill hyprpicker || hyprpicker --autocopy --format=he
 
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = tile, initialTitle:Visual Paradigm
+windowrulev2 = opaque, class:(mpv|Firefox)
 
