Add support for spotifyd MPRIS

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -47,6 +47,7 @@
     "player-icons": {
       "default": "🎵",
       "spotify": " ",
+      "spotifyd": " ",
       "firefox": "󰈹",
       "vlc": "󰕼",
       "chromium": "",
