Add support for spotify_player MPRIS

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -48,6 +48,7 @@
       "default": "🎵",
       "spotify": " ",
       "spotifyd": " ",
+      "spotify_player": " ",
       "firefox": "󰈹",
       "vlc": "󰕼",
       "chromium": "",
