Fix Signal audio bug

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,8 +18,11 @@ exec-once = ~/.config/ntfyd/start.sh
 
 exec-once = flatpak run com.discordapp.Discord --start-minimized
 exec-once = flatpak run com.sindresorhus.Caprine
-exec-once = flatpak run org.signal.Signal
 exec-once = steam -silent
+
+# for some reason, audio doesn't work in Signal if it's started too early
+# TODO: replace with a better solution
+exec-once = sleep 10 && flatpak run org.signal.Signal
 
 env = XCURSOR_THEME, Adwaita
 env = XCURSOR_SIZE,24
