Add Spotify autostart

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,7 +18,12 @@ exec-once = ~/.config/ntfyd/start.sh
 
 exec-once = flatpak run com.discordapp.Discord --start-minimized
 exec-once = flatpak run com.sindresorhus.Caprine
+exec-once = flatpak run com.spotify.Client
 exec-once = steam -silent
+
+# Spotify doesn't have a --minimized flag, so we wait for the window
+# and close it as soon as it appears
+exec-once = while [ "$(hyprctl dispatch closewindow spotify)" != "ok" ]; do sleep 0.1; done
 
 # for some reason, audio doesn't work in Signal if it's started too early
 # TODO: replace with a better solution
