Use native hyprland monitors directive instead of kanshi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,9 +1,10 @@
 # vim: filetype=hyprlang
 
+source = monitors.conf
+
 $terminal = alacritty
 $fileManager = nautilus
 
-exec-once = kanshi
 exec-once = hyprpm reload -n
 
 # add binds for plugins at runtime because hyprpm needs to load them first
