Update home monitor configuration

--- a/.config/hypr/monitors/home.conf
+++ b/.config/hypr/monitors/home.conf
@@ -1,5 +1,6 @@
 # vim: filetype=hyprlang
 
-monitor = DP-3, 1920x1080@180, 0x0, 1, bitdepth, 10
-monitor = DVI-D-1, 1920x1080@60, 1920x0, 1
+monitor = HDMI-A-1, 1920x1080@71.91, 0x0, 1, transform, 2 # 180° 
+monitor = DP-3, 1920x1080@180, 1920x0, 1, bitdepth, 10
+monitor = DVI-D-1, 1920x1080@60, 3840x0, 1
 
