--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -53,7 +53,7 @@ graph_symbol_proc = "default"
 shown_boxes = "cpu mem net proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 1000
+update_ms = 500
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
@@ -63,7 +63,7 @@ proc_sorting = "cpu lazy"
 proc_reversed = False
 
 #* Show processes as a tree.
-proc_tree = False
+proc_tree = True
 
 #* Use the cpu graph colors in the process list.
 proc_colors = True
@@ -87,7 +87,7 @@ proc_info_smaps = False
 proc_left = False
 
 #* (Linux) Filter processes tied to the Linux kernel(similar behavior to htop).
-proc_filter_kernel = False
+proc_filter_kernel = True
 
 #* In tree-view, always accumulate child process resources in the parent process.
 proc_aggregate = False
@@ -141,7 +141,7 @@ show_cpu_freq = True
 
 #* Draw a clock at top of screen, formatting according to strftime, empty string to disable.
 #* Special formatting: /host = hostname | /user = username | /uptime = system uptime
-clock_format = "%X"
+clock_format = " %X"
 
 #* Update main ui in background when menus are showing, set this to false if the menus is flickering too much for comfort.
 background_update = True
@@ -199,10 +199,10 @@ io_graph_speeds = ""
 #* Set fixed values for network graphs in Mebibits. Is only used if net_auto is also set to False.
 net_download = 100
 
-net_upload = 100
+net_upload = 20
 
 #* Use network graphs auto rescaling mode, ignores any values set above and rescales down to 10 Kibibytes at the lowest.
-net_auto = True
+net_auto = False
 
 #* Sync the auto scaling for download and upload to whichever currently has the highest scale.
 net_sync = False
@@ -221,7 +221,7 @@ show_battery_watts = True
 
 #* Set loglevel for "~/.config/btop/btop.log" levels are: "ERROR" "WARNING" "INFO" "DEBUG".
 #* The level set includes all lower levels, i.e. "DEBUG" will show all logging info.
-log_level = "WARNING"
+log_level = "ERROR"
 
 #* Measure PCIe throughput on NVIDIA cards, may impact performance on certain cards.
 nvml_measure_pcie_speeds = True
