Add keybind for opening browser

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,6 +4,7 @@ source = monitors.conf
 
 $terminal = alacritty
 $fileManager = nautilus
+$browser = xdg-open http://
 
 exec-once = hyprpm reload -n
 
@@ -168,6 +169,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, pkill wofi || wofi
 bind = $mainMod, F, fullscreen,
+bind = $mainMod, B, exec, $browser
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
