Fix Discord audio

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,7 +18,6 @@ exec-once = ~/.config/waybar/start.sh
 exec-once = ~/.config/hypr/events.sh
 exec-once = ~/.config/ntfyd/start.sh
 
-exec-once = flatpak run com.discordapp.Discord --start-minimized
 exec-once = flatpak run com.sindresorhus.Caprine
 exec-once = steam -silent
 
@@ -26,6 +25,7 @@ exec-once = steam -silent
 # TODO: replace with a better solution
 exec-once = sleep 10 && flatpak run org.signal.Signal
 exec-once = sleep 10 && flatpak run com.spotify.Client
+exec-once = sleep 10 && flatpak run com.discordapp.Discord --start-minimized
 
 # Spotify doesn't have a --minimized flag, so we wait for the window
 # and close it as soon as it appears
