Fix suspend command

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -25,6 +25,6 @@ listener {
 
 listener {
     timeout = 1800
-    on-timeout = systemctl suspend                # suspend pc
+    on-timeout = loginctl suspend                # suspend pc
 }
 
