--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -169,6 +169,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, pkill wofi || wofi
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, N, exec, swaync-client --toggle-panel --skip-wait
+bind = $mainMod SHIFT, N, exec, swaync-client --close-all
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
