Close notification center when dismissing notifications

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -170,7 +170,7 @@ bind = $mainMod, R, exec, pkill wofi || wofi
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, N, exec, swaync-client --toggle-panel --skip-wait
-bind = $mainMod SHIFT, N, exec, swaync-client --close-all
+bind = $mainMod SHIFT, N, exec, swaync-client --close-all && swaync-client --close-panel
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
