Make Waybar transparent with blur

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -231,3 +231,5 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = tile, initialTitle:Visual Paradigm
 windowrulev2 = opaque, class:(mpv|Firefox)
 
+layerrule = blur, waybar
+
