Move scripts into ~/.scripts

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,18 +14,18 @@ exec = hyprctl keyword bindr SUPER, SUPER_L, hyprexpo:expo, toggle
 exec-once = pipewire
 exec-once = hypridle
 exec-once = swaync
-exec-once = ~/.config/waybar/start.sh
-exec-once = ~/.config/hypr/events.sh
-exec-once = ~/.config/ntfyd/start.sh
+exec-once = waybar-autoreload
+exec-once = hyprland-events
+exec-once = ntfyd-start
 
-exec-once = flatpak run com.sindresorhus.Caprine
 exec-once = steam -silent
 
 # for some reason, audio doesn't work in certain apps if they are started too early
 # TODO: replace with a better solution
-exec-once = sleep 10 && flatpak run org.signal.Signal
-exec-once = sleep 10 && flatpak run com.spotify.Client
 exec-once = sleep 10 && flatpak run com.discordapp.Discord --start-minimized
+exec-once = sleep 10 && flatpak run com.sindresorhus.Caprine
+exec-once = sleep 10 && flatpak run com.spotify.Client
+exec-once = sleep 10 && flatpak run org.signal.Signal
 
 # Spotify doesn't have a --minimized flag, so we wait for the window
 # and close it as soon as it appears
