--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,9 +6,8 @@ repos:
     rev: v5.0.0
     hooks:
       - id: check-added-large-files
-      - id: check-case-conflict
       - id: check-executables-have-shebangs
-      - id: check-illegal-windows-names
+      - id: check-json
       - id: check-merge-conflict
       - id: check-shebang-scripts-are-executable
       - id: check-symlinks
@@ -18,8 +17,6 @@ repos:
       - id: end-of-file-fixer
       - id: mixed-line-ending
         args: ["--fix=lf"]
-      - id: name-tests-test
-        args: ["--pytest-test-first"]
       - id: trailing-whitespace
   - repo: https://github.com/koalaman/shellcheck-precommit
     rev: v0.10.0
