Fix hyprland opening new workspace after sleep

--- a/.config/hypr/monitors/home.conf
+++ b/.config/hypr/monitors/home.conf
@@ -3,3 +3,6 @@
 monitor = HDMI-A-1, 1920x1080@71.91, 0x0, 1, transform, 2 # 180°
 monitor = DP-3, 1920x1080@180, 1920x0, 1, bitdepth, 10
 monitor = DVI-D-1, 1920x1080@60, 3840x0, 1
+
+# https://github.com/hyprwm/Hyprland/issues/7608
+workspace = 1,monitor:DP-3,default:true
