--- a/.config/hypr/monitors/home.conf
+++ b/.config/hypr/monitors/home.conf
@@ -1,8 +1,8 @@
 # vim: filetype=hyprlang
 
-monitor = HDMI-A-1, 1920x1080@71.91, 0x0, 1, transform, 2 # 180°
+monitor = HDMI-A-1, 1920x1080@71.91, 0x0, 1
 monitor = DP-3, 1920x1080@180, 1920x0, 1, bitdepth, 10
-monitor = DVI-D-1, 1920x1080@60, 3840x0, 1
+monitor = DP-1, 1920x1080@71.91, 3840x0, 1
 
 # https://github.com/hyprwm/Hyprland/issues/7608
 workspace = 1,monitor:DP-3,default:true
