Increase ghostty max scrollback buffer size to 10 MB

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -10,7 +10,7 @@ cursor-style=underline
 font-family=JetBrains Mono
 font-size=10
 resize-overlay=never
-scrollback-limit=10000
+scrollback-limit=10000000
 shell-integration-features=no-cursor
 window-decoration=false
 window-padding-x=5
