Update Hyprland config to v0.48.1

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -79,10 +79,12 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 0.9
 
-    drop_shadow = true
-    shadow_range = 20
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled = true
+        range = 20
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 
     blur {
         enabled = true
@@ -140,8 +142,8 @@ gestures {
     workspace_swipe_direction_lock = false
 }
 
-opengl {
-    force_introspection = 1
+ecosystem {
+    no_donation_nag = true
 }
 
 plugin {
