Enable xx_color_management_v4

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -146,6 +146,10 @@ ecosystem {
     no_donation_nag = true
 }
 
+experimental {
+    xx_color_management_v4 = true
+}
+
 plugin {
     hyprexpo {
         columns = 2
