Enable secondary US keyboard layout

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -118,14 +118,12 @@ misc {
 }
 
 input {
-    kb_layout = cz
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
+    kb_layout = cz,us
+    kb_options = grp:alt_shift_toggle, grp:win_space_toggle
 
     numlock_by_default = true
     follow_mouse = 2
+    resolve_binds_by_sym = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
