--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -204,7 +204,10 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, S, movetoworkspace, +0
+bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod, S, movetoworkspace, special:magic
+bind = $mainMod, S, togglespecialworkspace, magic
 
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
