Set font family; use true instead of 1

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -115,6 +115,8 @@ master {
 misc {
     force_default_wallpaper = 0
     vrr = 1
+    font_family = JetBrains Mono
+    splash_font_family = JetBrains Mono
 }
 
 input {
@@ -123,7 +125,7 @@ input {
 
     numlock_by_default = true
     follow_mouse = 2
-    resolve_binds_by_sym = 1
+    resolve_binds_by_sym = true
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
