Disable alt-shift keyboard layout toggle

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -121,7 +121,7 @@ misc {
 
 input {
     kb_layout = cz,us
-    kb_options = grp:alt_shift_toggle, grp:win_space_toggle
+    kb_options = grp:win_space_toggle
 
     numlock_by_default = true
     follow_mouse = 2
